adlatus-ci-cd/cd/deploy/base/modules/appointment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-api-deployment
  namespace: adl
  labels:
    app: appointment-api
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: appointment-api
  template:
    metadata:
      labels:
        app: appointment-api
    spec:
      containers:
        - name: appointment-api
          image: appointment-api:latest
          ports:
            - containerPort: 8080
          # envFrom:
          #  - configMapRef:
          #      name: appointment-api-config
          #  - secretRef:
          #      name: appointment-api-secret
