adlatus-ci-cd/cd/deploy/base/modules/appointment-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: appointment-api-service
  namespace: adl
spec:
  selector:
    app: appointment-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
